--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <h2>个人主页</h2>
         <p>你可以通过以下方式来到我们的个人主页：</p>
         <ul>
-            <li>李凤乔：https://fengdairen.github.io/Myweb/<a href="https://fengdairen.github.io/Myweb/" target="_blank">点击这里</a>
+            <li>李凤乔：https://fengdairen.github.io/Myweb/index.html<a href="https://fengdairen.github.io/Myweb/index.html" target="_blank">点击这里</a>
 </li>
-            <li>朱颐：</li>
-			<li>沈艺豪：</li>
-			<li>姜峰：</li>
+            <li>朱颐：https://masteryi114514.github.io/924-/index.html<a href="https://masteryi114514.github.io/924-/index.html" target="_blank">点击这里</a></li>
+			<li>沈艺豪：https://guluguluge.github.io/syhWeb/index.html<a href="https://guluguluge.github.io/syhWeb/index.html" target="_blank">点击这里</a></li>
+			<li>姜峰：https://jifeng2000.github.io/jifengweb/index.html<a href="https://jifeng2000.github.io/jifengweb/index.html" target="_blank">点击这里</a></li>
         </ul>
     </section>
-	    <section id="contact">
+	    <section id="contact2">
         <h2>班级主页</h2>
         <p>你可以通过下面的网址来到我们的7218班班级主页：</p>
         <ul>
